2012-12-11  Xianzhu Wang  <wangxianzhu@chromium.org>

        Add window.internals.mainThreadScrollReasonsAsText for testing slow scrolling
        https://bugs.webkit.org/show_bug.cgi?id=104714

        Reviewed by Eric Seidel.

        Export symbol Page::mainThreadScrollingReasonsAsText().

        * win/WebKit2.def.in:

2012-12-11  Gwang Yoon Hwang  <ryumiel@company100.net>

        Coordinated Graphics: Rename LayerTreeCoordinator to CoordinatedLayerTreeHost
        https://bugs.webkit.org/show_bug.cgi?id=104641

        Reviewed by Noam Rosenthal.

        The name of LayerTreeCoordinator does not match LayerTreeHost.  This
        patch renames it to CoordinatedLayerTreeHost. And make a getter for
        CoordinatedLayerTreeHostProxy in QQuickWebPagePrivate to make a cleaner code.

        No new tests - just a refactoring.

        * CMakeLists.txt:
        * DerivedSources.pri:
        * Platform/CoreIPC/MessageID.h:
        * Target.pri:
        * UIProcess/API/efl/EwkViewImpl.cpp:
        (EwkViewImpl::layerTreeRenderer):
        * UIProcess/API/qt/qquickwebpage.cpp:
        (QQuickWebPagePrivate::paint):
        (QQuickWebPagePrivate::coordinatedLayerTreeHostProxy):
        (QQuickWebPage::updatePaintNode):
        (QQuickWebPagePrivate::updateSize):
        * UIProcess/API/qt/qquickwebpage_p_p.h:
        (WebKit):
        (QQuickWebPagePrivate):
        * UIProcess/API/qt/raw/qrawwebview.cpp:
        (QRawWebView::setSize):
        (QRawWebView::layerTreeRenderer):
        * UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.cpp: Renamed from Source/WebKit2/UIProcess/CoordinatedGraphics/LayerTreeCoordinatorProxy.cpp.
        (WebKit):
        (WebKit::CoordinatedLayerTreeHostProxy::CoordinatedLayerTreeHostProxy):
        (WebKit::CoordinatedLayerTreeHostProxy::~CoordinatedLayerTreeHostProxy):
        (WebKit::CoordinatedLayerTreeHostProxy::updateViewport):
        (WebKit::CoordinatedLayerTreeHostProxy::dispatchUpdate):