@@ -1,3 +1,13 @@
+2012-12-11  Alexey Proskuryakov  <ap@apple.com>
+
+        <rdar://problem/12857870> [WK2 NetworkProcess] Cannot load HTTPS sites
+        https://bugs.webkit.org/show_bug.cgi?id=104732
+
+        Reviewed by Anders Carlsson.
+
+        * Shared/BlockingResponseMap.h: (BlockingBoolResponseMap::waitForResponse):
+        Fixed to make sense.
+
 2012-12-11  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Add window.internals.mainThreadScrollReasonsAsText for testing slow scrolling
